dev/non_executable_reasons_record/827.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
import urllib2

source = urllib2.urlopen("http://cse.kut.ac.kr/").read()

print source # ì¶”í›„ ìˆ™ì œ ë‹µì•ˆ ì œì¶œ ë•Œì—” ì™¼ìª½ ë¼ì¸ì€ ì£¼ì„ì²˜ë¦¬í•  ê²ƒ
------------------

[0;36m  File [0;32m"<ipython-input-1-32d12d7e7a29>"[0;36m, line [0;32m7[0m
[0;31m    print source # ì¶”í›„ ìˆ™ì œ ë‹µì•ˆ ì œì¶œ ë•Œì—” ì™¼ìª½ ë¼ì¸ì€ ì£¼ì„ì²˜ë¦¬í•  ê²ƒ[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(source # ì¶”í›„ ìˆ™ì œ ë‹µì•ˆ ì œì¶œ ë•Œì—” ì™¼ìª½ ë¼ì¸ì€ ì£¼ì„ì²˜ë¦¬í•  ê²ƒ)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(source # ì¶”í›„ ìˆ™ì œ ë‹µì•ˆ ì œì¶œ ë•Œì—” ì™¼ìª½ ë¼ì¸ì€ ì£¼ì„ì²˜ë¦¬í•  ê²ƒ)? (<ipython-input-1-32d12d7e7a29>, line 7)

Executability                            : False
